--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
     "@mikro-orm/migrations": "^5.0.1",
     "@mikro-orm/postgresql": "^5.0.1",
     "pg": "^8.7.3"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
